@startuml
class Main
class Game
class Player
class FileIO
class TextUI
class BankAccount

Main *-- Game
Main : - static Game game;
Main : + static void main();
Game : - File fileIO;
Game : - TextUI textUI;
Game : + ArrayList<Player> players
Game : + void gameSetup()
Game : - createPlayers(ArrayList<String> data)
Game *-- FileIO
Game *-- TextUI
Game *-- Player
Player *-- BankAccount

FileIO : + readGameData()
FileIO : + void writeGameData(ArrayList<Player> players)

TextUI : + String getUserInput(String msg)
TextUI : + int getUserInput(String msg, (ArrayList<String> options)
TextUI : + (ArrayList<String> getUserInput((String msg, int iterations)

Player *-- BankAccount
Player : - String name
Player : + Player(String name, int amount)
Player : + String getName()
Player : + void setName(String name)
Player : + void buy(int cost)
Player : + void getAmount()
Player : + String toString()

BankAccount : - int balance
BankAccount : + BankAccount(int startAmount)
BankAccount : + void doTransaction(int amount)
BankAccount : + int getBalance()
BankAccount : + String toString()



@enduml